홈 렌더링페이지, 리듀서 타입 설정

--- a/src/components/Player/styles.scss
+++ b/src/components/Player/styles.scss
@@ -1,5 +1,7 @@
 .play-btn,
 .skip-btn {
-  // background: transparent;
+  background: transparent;
+  z-index: 2;
+  position: relative;
   border: none;
 }
