--- a/src/components/RainToggleBtn/styles.scss
+++ b/src/components/RainToggleBtn/styles.scss
@@ -1,5 +1,44 @@
 .wrapper {
-  margin-top: 10rem;
-  position: relative;
-  z-index: 3;
+  position: absolute;
+  z-index: 10;
+  left: 12px;
+  top: -200px;
+  width: 250px;
+  height: 100px;
+  margin: 20% auto;
+  color: white;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-content: center;
+
+  .button {
+    font-size: 1.3rem;
+    border: 2px solid darkgray;
+    border-radius: 100px;
+    width: 40px;
+    height: 40px;
+    margin: 5px auto;
+    transition: 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+  .icon {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    // text-align: center;
+  }
+
+  .button:hover {
+    width: 125px;
+    background-color: rgba(0, 0, 0, 0.8);
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+    color: #91ccc2;
+    transition: 0.3s;
+    border: none;
+  }
+  .button:active {
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    transition: 0.05s;
+  }
 }
