--- a/src/components/RainToggleBtn/styles.scss
+++ b/src/components/RainToggleBtn/styles.scss
@@ -1,8 +1,8 @@
-.wrapper {
+.wrapper1 {
   position: absolute;
   z-index: 10;
   left: 12px;
-  top: -200px;
+  top: -100px;
   width: 250px;
   height: 100px;
   margin: 20% auto;
