--- a/src/reset.scss
+++ b/src/reset.scss
@@ -1,5 +1,5 @@
 body {
-  overflow-y: scroll;
+  // overflow-y: scroll;
   overflow-x: hidden;
   /* // Disable Text Selection */
   user-select: none;
