--- a/src/components/Board/styles.scss
+++ b/src/components/Board/styles.scss
@@ -1,13 +1,14 @@
 .board {
   position: absolute;
   left: 20px;
-  top: 45%;
+  top: 40%;
   height: 135px;
   width: 60px;
   z-index: 11;
   border-radius: 34px;
   margin-left: 36px;
   padding: 10px;
+  background-color: rgba(0, 0, 0, 0.8);
   color: #4e5054;
   display: flex;
   flex-direction: column;
@@ -23,11 +24,11 @@
 .modifier__icon:first-child {
   border: none;
 }
-.modifier.mood {
-  border-radius: 0 34px 34px 34px;
+.board.mood {
+  border-radius: 34px 0px 34px 34px;
 }
-.modifier.focus {
-  border-radius: 34px 34px 34px 0;
+.board.focus {
+  border-radius: 34px 34px 0px 34px;
 }
 .modifierBox {
   position: absolute;
