♻️ backgroundsound 컴포넌트 분리 리팩토링

--- a/src/layout/Header/Header.scss
+++ b/src/layout/Header/Header.scss
@@ -13,8 +13,9 @@
 
   a {
     img {
-      max-width: 150px;
-      max-height: 150px;
+      width: 150px;
+      height: 100%;
+      object-fit: cover;
     }
     @media (max-width: 768px) {
       padding: 0 5px;
